--- a/src/component/IntroPage/IntroPage.module.css
+++ b/src/component/IntroPage/IntroPage.module.css
@@ -145,7 +145,7 @@ padding-bottom: 20px;
   color: #ffffff;
 }
 .start_button img {
-  width: 15px;
+  width: 65px;
   height: 65px;
   padding-bottom: 2px;
 }
